--- a/src/sdk/view/pages/ZegoBrowserCheckMobile/index.module.scss
+++ b/src/sdk/view/pages/ZegoBrowserCheckMobile/index.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  margin: vw(186px) 0 auto 0;
+  margin: vw(146px) 0 auto 0;
   background-color: #ffffff;
   .videoScree {
     position: relative;
@@ -32,20 +32,28 @@
       .micOpen {
         margin-right: vw(46px);
         background: url(../../../sdkMobileAssets/mic_open@2x.png);
-        background-size: contain;
+        background-size: vw(52px);
+        background-repeat: no-repeat;
+        background-position: center;
       }
       .micClose {
         margin-right: vw(46px);
         background: url(../../../sdkMobileAssets/mic_close@2x.png);
-        background-size: contain;
+        background-size: vw(52px);
+        background-repeat: no-repeat;
+        background-position: center;
       }
       .cameraOpen {
         background: url(../../../sdkMobileAssets/camera_open@2x.png);
-        background-size: contain;
+        background-size: vw(52px);
+        background-repeat: no-repeat;
+        background-position: center;
       }
       .cameraClose {
         background: url(../../../sdkMobileAssets/camera_close@2x.png);
-        background-size: contain;
+        background-size: vw(52px);
+        background-repeat: no-repeat;
+        background-position: center;
       }
     }
   }
